# projects

./: README.md
android/AndroidTutorial/: build.gradle
assembler/: mul_two_big_numbers.asm  sub_two_big_numbers.asm  words_count_util.asm
bash/: script1.sh  script2.sh  script3.sh  script4.sh  script5.sh
cpp/big_integer/: big_integer.cpp  big_integer.h
cpp/circular_buffer/: circular_buffer.h
cpp/image_convertor/: convertor.cpp
cpp/list/: list.h
cpp/set/: set.h
cpp/socow-vector/: socow-vector.h
cpp/some_codeforces_tasks/: binary_tree.cpp  cryptogrphy.cpp  hemming_correction_code.cpp  huffman_encoding.cpp  one_more_tree.cpp  persis_segment_tree.cpp  stars.cpp
cv/: cv.tex
haskell/tic-tac-toe/: hask.cabal  stack.yaml
haskell/tic-tac-toe/exe/: Main.hs
haskell/tic-tac-toe/libs/: Game.hs  Logic.hs  Rendering.hs
java/disassembler/: DisAssembler.java
java/java-solutions/: FastScanner.java  FastScannerWordStat.java  IntList.java  Pair.java  Reverse.java  ReverseHexAbc2.java  ReverseSum2.java  Sum.java  SumBigIntegerHex.java  WordStatCount.java  WordStatInput.java  Wspp.java  WsppSortedSecondG.java
java/spring-tutorial/: pom.xml
kotlin/homework03/: README.md
ml/: mnist_tensorflow_pytorch.html  mnist_tensorflow_pytorch.ipynb
os/lab1/: emails.lst  script-1.sh  script-10.sh  script-2.sh  script-3.sh  script-4.sh  script-5.sh  script-6.sh  script-7.sh  script-8.sh  script-9.sh
os/lab2/: results-task-1.txt  results-task-4.txt  results-task-5.txt  script-1.sh  script-2.sh  script-3.sh  script-4.sh  script-5.sh  script-6.sh  script-7.sh  script-mod.sh
(+329 files in other folders)
