cabal-version: 2.4

name: hask
version: 1.0
author: viajero

library
  build-depends: base, gloss, array
  default-language: Haskell2010
  exposed-modules: Game, Rendering, Logic
  hs-source-dirs: libs

executable hask
  build-depends: base, gloss, hask
  default-language: Haskell2010
  hs-source-dirs: exe
  main-is: Main.hs
